# mangapplizer-backend

./: .clog.toml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  go.mod  go.sum  rustfmt.toml  schema.sql  swagger.yml  testcert.pem  testssl.pem
cmd/mangapplizer/: main.go  mangapplizer.go
cmd/mangapplizer-server/: main.go
db/: crole.sql  post-install.sh  run.sh
docker/: Dockerfile.postgres  run.sh
examples/: chapters  example_input.json  example_parser.rs
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2019-10-26-220112_create_staff/: down.sql  up.sql
migrations/2019-10-26-220725_create_relations/: down.sql  up.sql
migrations/2019-10-26-220734_create_mangas/: down.sql  up.sql
migrations/2019-10-26-220741_create_series/: down.sql  up.sql
migrations/2019-10-26-220745_create_media/: up.sql
migrations/2019-11-21-114603_create_genres/: down.sql  up.sql
migrations/2019-11-21-114608_create_genre_lists/: down.sql  up.sql
migrations/2019-11-21-114611_create_tags/: up.sql
migrations/2019-11-21-114615_create_tags_list/: down.sql  up.sql
migrations/2019-12-09-044610_add_tsvector_to_mangas/: down.sql  up.sql
migrations/2019-12-23-115942_kissmanga_chapters/: down.sql  up.sql
models/: authentication_error.go  error.go  manga_list.go
pkg/anilist/: anilist_query.go  anilist_query_test.go  anilist_response_parser.go  query.go
pkg/api/: handler_test.go  handlers.go  http.go
pkg/database/: postgre.go
pkg/parser/mangarock/: mangarock.go  mri.go  utils.go
restapi/: configure_mangapplizer.go  doc.go  embedded_spec.go  server.go
restapi/operations/: mangapplizer_api.go
restapi/operations/v1/: get_manga.go  get_manga_parameters.go  get_manga_responses.go  get_manga_urlbuilder.go  get_root.go  get_root_parameters.go  get_root_responses.go  get_root_urlbuilder.go
src/: cli_args.rs  db_connection.rs  errors.rs  lib.rs  main.rs  models.rs  schema.rs
src/database/: mod.rs  pool.rs
src/handlers/: function_handler.rs  mangas.rs  mod.rs
src/manga/: handler.rs  mod.rs  model.rs
src/manga/service/: mod.rs  search.rs
src/models/: genre.rs  genre_lists.rs  json_manga.rs  kissmanga_chapter.rs  manga.rs  media.rs  mod.rs  relation.rs  response.rs  series.rs  staff.rs  tag.rs  tag_lists.rs
