[package]
name = "mangapplizer_backend"
version = "0.3.0"
authors = ["Taylan Dogan <doganntaylan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "1.0.8"
diesel = { version = "1.4.3", features = ["postgres", "uuidv07", "r2d2"] }
dotenv = "0.15.0"
# uuid = { version = "0.8", features = ["v4"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
log = "0.4.0"
env_logger = "0.7.1"
