[package]
name = "mangapplizer_backend"
version = "0.4.0"
authors = ["Taylan Dogan <doganntaylan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-http = "1.0.1"
diesel = { version = "1.4.3", features = ["postgres", "uuidv07", "r2d2", "serde_json"] }
dotenv = "0.15.0"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = "1.0.102"
serde_derive = "1.0.102"
serde_json = "1.0.41"
log = "0.4.0"
env_logger = "0.7.1"
dotenv_codegen = "0.15.0"
diesel_full_text_search = { version = "1.2.1", git = "https://github.com/werner/diesel_full_text_search" }

[profile.dev]
# This isn't required for development builds, but makes development
# build behavior match release builds. To enable unwinding panics
# during development, simply remove this line.
panic = 'abort'

[profile.release]
opt-level = 'z'     # Optimize for size. Normally its 3 for binary speed{preffered}
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
